<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/design_default_color_background"
    >



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@mipmap/ic_launcher_round"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop="40dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextEmail"
                android:hint="@string/hint_email"
                android:textColorHint="@color/cardview_light_background"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInputEditTextPassword"
                android:hint="@string/hint_password"
                android:textColorHint="@color/cardview_light_background"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textColor="@color/design_default_color_secondary"
            android:background="@color/cardview_shadow_start_color"
            android:text="@string/text_login"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textSize="16sp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>